--- a/.github/workflows/iso_build.yaml
+++ b/.github/workflows/iso_build.yaml
@@ -24,9 +24,9 @@ jobs:
     needs: [prepare-release]
     strategy:
       matrix:
-        EDITION: [gnome, architect]
+        EDITION: [architect]
         BRANCH: [unstable, stable]
-        SCOPE: [full, minimal]
+        SCOPE: [minimal]
     steps:
       - 
         uses: styfle/cancel-workflow-action@0.9.0
