--- a/.github/workflows/iso_build_staging.yml
+++ b/.github/workflows/iso_build_staging.yml
@@ -8,11 +8,11 @@ jobs:
   prepare-release:
     runs-on: ubuntu-20.04
     steps:
-      - 
+      -
         uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      - 
+      -
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
@@ -24,34 +24,34 @@ jobs:
     needs: [prepare-release]
     strategy:
       matrix:
-        EDITION: [gnome]
-        BRANCH: [stable-staging]
-        SCOPE: [full, minimal]
+        EDITION: [gnome,architect]
+        BRANCH: [stable,unstable-staging]
+        SCOPE: [minimal]
     steps:
-      - 
+      -
         uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      - 
+      -
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
-          format: 'YY.MM'   
+          format: 'YY.MM'
       -
         name: image-build-upload
-        uses: manjaro/manjaro-iso-action@v2.4
+        uses: manjaro-architect/manjaro-iso-action
         with:
           iso-profiles-repo: https://github.com/Manjaro-Sway/iso-profiles
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
           scope: ${{ matrix.scope }}
           version: ${{ steps.time.outputs.time }}-development
-          kernel: linux513
+          kernel: linux515
           code-name: "Nightly-Build"
           release-tag: ${{ needs.prepare-release.outputs.release_tag }}
       -
         name: rollback
         if: ${{ failure() || cancelled() }}
-        run: |
-          echo ${{ github.token }} | gh auth login --with-token
-          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+        run: gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
