--- a/.github/workflows/iso_build.yaml
+++ b/.github/workflows/iso_build.yaml
@@ -8,11 +8,11 @@ jobs:
   prepare-release:
     runs-on: ubuntu-20.04
     steps:
-      - 
+      -
         uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      - 
+      -
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
@@ -25,21 +25,21 @@ jobs:
     strategy:
       matrix:
         EDITION: [architect]
-        BRANCH: [unstable, stable]
+        BRANCH: [unstable]
         SCOPE: [minimal]
     steps:
-      - 
+      -
         uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      - 
+      -
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
-          format: 'YY.MM'   
+          format: 'YY.MM'
       -
         name: image-build-upload
-        uses: manjaro/manjaro-iso-action@v2.4
+        uses: manjaro-architect/manjaro-iso-action@master
         with:
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
