--- a/.github/workflows/iso_build_staging.yml
+++ b/.github/workflows/iso_build_staging.yml
@@ -39,7 +39,7 @@ jobs:
           format: 'YY.MM'
       -
         name: image-build-upload
-        uses: manjaro/manjaro-iso-action@v2.5
+        uses: manjaro-architect/manjaro-iso-action@main
         with:
           iso-profiles-repo: https://github.com/Manjaro-Sway/iso-profiles
           edition: ${{ matrix.edition }}
