--- a/.github/workflows/iso_build_staging.yml
+++ b/.github/workflows/iso_build_staging.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         EDITION: [gnome,architect]
-        BRANCH: [stable,unstable-staging]
+        BRANCH: [stable]
         SCOPE: [minimal]
     steps:
       -
