--- a/.github/workflows/iso_build_staging.yml
+++ b/.github/workflows/iso_build_staging.yml
@@ -24,7 +24,7 @@ jobs:
     needs: [prepare-release]
     strategy:
       matrix:
-        EDITION: [gnome,architect]
+        EDITION: [architect]
         BRANCH: [stable]
         SCOPE: [minimal]
     steps:
