--- a/.github/workflows/iso_build_staging.yml
+++ b/.github/workflows/iso_build_staging.yml
@@ -24,7 +24,7 @@ jobs:
     needs: [prepare-release]
     strategy:
       matrix:
-        EDITION: [architect]
+        EDITION: [gnome, architect]
         BRANCH: [stable]
         SCOPE: [minimal]
     steps:
@@ -39,7 +39,7 @@ jobs:
           format: 'YY.MM'
       -
         name: image-build-upload
-        uses: manjaro/manjaro-iso-action@main
+        uses: manjaro-architect/manjaro-iso-action@main
         with:
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
