--- a/.github/workflows/iso_build_stable.yml
+++ b/.github/workflows/iso_build_stable.yml
@@ -44,7 +44,7 @@ jobs:
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
           scope: ${{ matrix.scope }}
-          version: ${{ steps.time.outputs.time }}-development
+          version: ${{ steps.time.outputs.time }}
           kernel: linux515
           code-name: "Unofficial-Stable-Build"
           release-tag: ${{ needs.prepare-release.outputs.release_tag }}
